--- a/templates/albums.tmpl
+++ b/templates/albums.tmpl
@@ -11,7 +11,7 @@
 [% IF albums.size() > 0 %]
     <ul>
   [% FOREACH album IN albums %]
-      <li><a href="album.pl?alid=[% album.album_id %]">[% album.title %], [% album.artist_name %] ([% album.tracks %] track[% IF album.tracks != 1 %]s[% END %][% IF album.type %], [% album.type %][% END %][% IF album.released %], released [% album.released %][% END %])</a></li>
+      <li><a href="album.pl?alid=[% album.album_id %]">[% FILTER html %][% album.title %], [% album.artist_name %] ([% album.tracks %] track[% IF album.tracks != 1 %]s[% END %][% IF album.type %], [% album.type %][% END %][% IF album.released %], released [% album.released %][% END %])[% END %]</a></li>
   [% END %]
     </ul>
 [% END %]
