--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -12,31 +12,31 @@
       <table>
         <tr>
           <th>Artist</th>
-          <td><input type="text" name="artist" value="[% file.artist %]" /></td>
+          <td><input type="text" name="artist" value="[% FILTER html %][% file.artist %][% END %]" /></td>
         </tr>
         <tr>
           <th>Album</th>
-          <td><input type="text" name="album" value="[% file.album %]" /></td>
+          <td><input type="text" name="album" value="[% FILTER html %][% file.album %][% END %]" /></td>
         </tr>
         <tr>
           <th>Albumartist</th>
-          <td><input type="text" name="albumartist" value="[% file.albumartist %]" /></td>
+          <td><input type="text" name="albumartist" value="[% FILTER html %][% file.albumartist %][% END %]" /></td>
         </tr>
         <tr>
           <th>Title</th>
-          <td><input type="text" name="title" value="[% file.title %]" /></td>
+          <td><input type="text" name="title" value="[% FILTER html %][% file.title %][% END %]" /></td>
         </tr>
         <tr>
           <th>Tracknumber</th>
-          <td><input type="text" name="tracknumber" value="[% file.tracknumber %]" /></td>
+          <td><input type="text" name="tracknumber" value="[% FILTER html %][% file.tracknumber %][% END %]" /></td>
         </tr>
         <tr>
           <th>Musicbrainz album ID</th>
-          <td><input type="text" name="musicbrainz_albumid" value="[% file.musicbrainz_albumid %]" /></td>
+          <td><input type="text" name="musicbrainz_albumid" value="[% FILTER html %][% file.musicbrainz_albumid %][% END %]" /></td>
         </tr>
         <tr>
           <th>Musicbrainz track ID</th>
-          <td><input type="text" name="musicbrainz_trackid" value="[% file.musicbrainz_trackid %]" /></td>
+          <td><input type="text" name="musicbrainz_trackid" value="[% FILTER html %][% file.musicbrainz_trackid %][% END %]" /></td>
         </tr>
       </table>
       <div><input type="hidden" name="fiid" value="[% file.file_id %]" /></div>
@@ -46,21 +46,21 @@
       <table>
         <tr>
           <th>Score</th>
-          <th>[% file.tracknumber %]</th>
-          <th>[% file.albumartist %]</th>
-          <th>[% file.album %]</th>
-          <th>[% file.artist %]</th>
-          <th>[% file.title %]</th>
+          <th>[% FILTER html %][% file.tracknumber %][% END %]</th>
+          <th>[% FILTER html %][% file.albumartist %][% END %]</th>
+          <th>[% FILTER html %][% file.album %][% END %]</th>
+          <th>[% FILTER html %][% file.artist %][% END %]</th>
+          <th>[% FILTER html %][% file.title %][% END %]</th>
           <th>[% file.duration %]</th>
         </tr>
     [% FOREACH match IN matches %]
         <tr>
           <td style="background: #[% match.color %];">[% match.score %]</td>
           <td>[% match.tracknumber %]</td>
-          <td><a href="artist.pl?arid=[% match.albumartist_id %]">[% match.albumartist %]</a></td>
-          <td><a href="album.pl?alid=[% match.album_id %]">[% match.album %]</a></td>
-          <td><a href="artist.pl?arid=[% match.artist_id %]">[% match.artist %]</a></td>
-          <td><a href="track.pl?trid=[% match.track_id %]">[% match.title %]</a></td>
+          <td><a href="artist.pl?arid=[% match.albumartist_id %]">[% FILTER html %][% match.albumartist %][% END %]</a></td>
+          <td><a href="album.pl?alid=[% match.album_id %]">[% FILTER html %][% match.album %][% END %]</a></td>
+          <td><a href="artist.pl?arid=[% match.artist_id %]">[% FILTER html %][% match.artist %][% END %]</a></td>
+          <td><a href="track.pl?trid=[% match.track_id %]">[% FILTER html %][% match.title %][% END %]</a></td>
           <td>[% match.duration %]</td>
         </tr>
     [% END %]
