--- a/templates/files.tmpl
+++ b/templates/files.tmpl
@@ -13,7 +13,7 @@
 [% IF files.size() > 0 %]
     <ul>
   [% FOREACH file IN files %]
-      <li><a href="file.pl?fiid=[% file.file_id %]">[% file.filename %]</a></li>
+      <li><a href="file.pl?fiid=[% file.file_id %]">[% FILTER html %][% file.filename %][% END %]</a></li>
   [% END %]
     </ul>
 [% END %]
