--- a/templates/tracks.tmpl
+++ b/templates/tracks.tmpl
@@ -11,7 +11,7 @@
 [% IF tracks.size() > 0 %]
     <ul>
   [% FOREACH track IN tracks %]
-      <li><a href="track.pl?trid=[% track.track_id %]">[% track.title %], [% track.artist_name %] - [% track.album_title %]</a></li>
+      <li><a href="track.pl?trid=[% track.track_id %]">[% FILTER html %][% track.title %], [% track.artist_name %] - [% track.album_title %][% END %]</a></li>
   [% END %]
     </ul>
 [% END %]
