--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -14,7 +14,13 @@
       <p>This album got files from multiple groups. You can narrow down to one group:</p>
       <ul>
         [% FOREACH group IN groups %]
-        <li><a href="album.pl?alid=[% album.album_id %]&amp;figrid=[% group.value %]">[% FILTER html %][% group.key %][% END %]</a></li>
+        <li>
+          [% IF cur_group == group.key %]
+            [% FILTER html %][% group.key %][% END %]
+          [% ELSE %]
+          <a href="album.pl?alid=[% album.album_id %]&amp;figrid=[% group.value %]">[% FILTER html %][% group.key %][% END %]</a>
+          [% END %]
+        </li>
         [% END %]
       </ul>
       [% END %]
@@ -38,6 +44,7 @@
           <th>Remove</th>
         </tr>
       [% END %]
+      [% NEXT IF cur_group != track.groupname %]
       [% IF track.file_id %]
         <tr>
           <td style="text-align: center;">
