--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -44,7 +44,7 @@
           <th>Remove</th>
         </tr>
       [% END %]
-      [% NEXT IF cur_group != track.groupname %]
+      [% NEXT IF (cur_group != '' && cur_group != track.groupname) %]
       [% IF track.file_id %]
         <tr>
           <td style="text-align: center;">
