added "mislength" and "detached" pages

--- a/templates/uncompared.tmpl
+++ b/templates/uncompared.tmpl
@@ -8,6 +8,7 @@
       </p>
     </form>
     <h2>Uncompared files</h2>
+    <p>This page lists files that aren't matched to any data retrieved from MusicBrainz. Usually this means that the metadata is so poor that Locutus is unable to find a match, or it may be that the track doesn't exist in MusicBrainz.</p>
 [% IF files.size() > 0 %]
     <ul>
   [% FOREACH file IN files %]
