--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -15,6 +15,8 @@
     </ul>
     <ul id="menu" class="list">
       <li><a href="matching.pl">Matching</a></li>
+      <li><a href="detached.pl">Detached</a></li>
+      <li><a href="mislength.pl">Mislength</a></li>
       <li><a href="uncompared.pl">Uncompared</a></li>
       <li>Cache, that wai -&gt;</li>
       <li><a href="artists.pl">Artists</a></li>
