--- a/gui/src/net/exent/locutus/gui/Locutus.form
+++ b/gui/src/net/exent/locutus/gui/Locutus.form
@@ -104,7 +104,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="hostTextField">
           <Properties>
-            <Property name="text" type="java.lang.String" value="example.com"/>
+            <Property name="text" type="java.lang.String" value="localhost"/>
           </Properties>
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="hostTextFieldFocusGained"/>
