clearing data in metafield

--- a/gui/src/net/exent/locutus/gui/Locutus.form
+++ b/gui/src/net/exent/locutus/gui/Locutus.form
@@ -283,7 +283,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="filenameLabel">
+        <Component class="javax.swing.JLabel" name="fileFilenameLabel">
           <Properties>
             <Property name="text" type="java.lang.String" value="File:"/>
           </Properties>
